# visual_servoing

./: README.md
control_speed/: CMakeLists.txt  package.xml
control_speed/msg/: velocity_control.msg
control_speed/src/: new_test_speed.cpp
new_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
new_detection/msg/: points_4_image_data.msg~  points_four_image_data.msg~
new_detection/src/: mean_shift_demo.cpp
ur5_vs/: CMakeLists.txt
ur5_vs/include/: my_funcs.h
ur5_vs/src/: MyFilledCircle.cpp  calibration_transform_setup.cpp  compute_image_jacobian.cpp  eyeinhand_6dof_tracking.cpp  image_node.cpp  image_processing.cpp
ur_description/urdf/: r200.urdf.xacro~  stand.xacro~  ur5.urdf.xacro~  ur5_robot.urdf.xacro  ur5_robot.urdf.xacro~  ur5_with_stand.urdf.xacro~  ur5_with_stand_gripper.urdf.xacro~
